--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -22,8 +22,7 @@
 <style>
     body{
         font-family: 'Open Sans', sans-serif;
-        background: #63c1f6;
-        margin: 0 auto 0 auto;
+        background: #c9e8fc;
         width:100%;
         text-align:center;
         margin: 20px 0px 20px 0px;
@@ -56,7 +55,7 @@
     .box{
         justify-content: center;
         background:white;
-        width:300px;
+        width:400px;
         border-radius:6px;
         margin: 0 auto 0 auto;
         padding:0px 0px 20px 0px;
